--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
@@ -24,7 +24,7 @@
         "laravel": {
             "providers": [
                 "NickKlein\\News\\NewsServiceProvider"
-            ],
+            ]
         }
     }
 }
